feat: Add remove and modify funtionalities
